--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,2 +1,3 @@
 Avoid dublicate product on post.
 Learn populate().
+Learn image store and multer package https://www.youtube.com/watch?v=srPXMt1Q0nY&list=PL55RiY5tL51q4D-B63KBnygU6opNPFk_q&index=10
